<resources>
    <string name="app_name">Chama</string>
    <string name="start">Start!</string>
    <string name="jrx">Jrx!</string>
    <string name="clear">Clear</string>

    <string name="login">Login:</string>
    <string name="name">Name:</string>
    <string name="public_repos">Public repos:</string>
    <string name="response_time">Response time:</string>


    <string name="parallel_request">Parallel request</string>
    <string name="sequently_request">Sequently request</string>


</resources>